# python-useful-tools

./: .gitignore  LICENSE  Python Useful Tools.spec  README.md  pyproject.toml
src/python_useful_tools/: Python Useful Tools.spec  main.py
src/python_useful_tools/qr_code_generator/: qr_code_generator.py
